[metadata]
name = defectdojo_cli
version = 0.2.1
description = CLI Wrapper for DefectDojo using APIv2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adiffpirate/defectdojo-cli
author = Luiz Paulo Souto Monteiro
author_email = lpsmonteiro2@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
python_requires = >=3.3
