[metadata]
name = defectdojo_cli
author = Luiz Paulo Souto Monteiro
author_email = lpsmonteiro2@gmail.com
description = CLI Wrapper for DefectDojo using APIv2
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
project_urls =
    Source Code = https://github.com/adiffpirate/defectdojo-cli
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6

[entry_points]
console_scripts =
    defectdojo = defectdojo_cli.__main__:main
